--- a/Bodega de bebidas/cadastro.html
+++ b/Bodega de bebidas/cadastro.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" href="./css/cadastro.css">
+<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 <title>Página de Cadastro</title>
@@ -17,11 +17,38 @@
 <label for="email">E-mail:</label>
 <input type="text" id="email" name="email" placeholder="Digite seu e-mail" required>
 
-<label for="password">Senha:</label>
-<input type="password" id="password" name="password" placeholder="Digite sua senha" required>
+<div class="password-input">
+  <label for="password">Senha:</label>
+<input type="password" id="password1" name="password" placeholder="Digite sua senha" required>
+ <span class="password-toggle" onclick="togglePasswordVisibility()">
+  <i id="toggle-icon" class="fas fa-eye"></i>
+</span>
+</div>
 
-<label for="confirmpassword">Confirmar Senha:</label>
-<input type="password" id="confirmpassword" placeholder="Confirmar senha:" required>
+<script>
+  function togglePasswordVisibility() {
+    const passwordInput1 = document.getElementById('password1');
+    const passwordInput2 = document.getElementById('password2');
+    const toggleIcon = document.getElementById('toggle-icon');
+    
+    if (passwordInput1.type === 'password') {
+      passwordInput1.type = 'text';
+      passwordInput2.type = 'text';
+      toggleIcon.classList.remove('fa-eye');
+      toggleIcon.classList.add('fa-eye-slash');
+    } else {
+      passwordInput1.type = 'password';
+      passwordInput2.type = 'password';
+      toggleIcon.classList.remove('fa-eye-slash');
+      toggleIcon.classList.add('fa-eye');
+    }
+  }
+</script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+  <div class="password-input">
+    <label for="password">Confirmar Senha:</label>
+  <input type="password" id="password2" placeholder="Confirmar Senha" required />
+
 
 <label for="Endereço">Endereço:</label>
 <input type="text" id="adress" name="adress" placeholder="Digite seu endereço" required>
